--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "telecom.televisa.com.izzi"
         minSdkVersion 10
         targetSdkVersion 11
-        versionCode 3
+        versionCode 7
         versionName "1.0"
     }
     buildTypes {
@@ -29,9 +29,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'com.android.support:support-v4:18.0.+'
+    compile 'com.android.support:support-v4:22.2.0'
     compile 'com.makeramen:roundedimageview:2.0.1'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.code.gson:gson:2.3'
     compile 'io.card:android-sdk:5.0.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
@@ -40,5 +40,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.2@aar'
+    compile 'com.google.android.gms:play-services-gcm:7.5.0'
 
 }
