--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.makeramen:roundedimageview:2.0.1'
@@ -35,12 +35,10 @@ dependencies {
     compile 'io.card:android-sdk:5.0.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
-
     compile 'com.google.zxing:core:2.2'
     compile 'net.hockeyapp.android:HockeySDK:3.5.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
-   compile 'com.nineoldandroids:library:2.4.0'
-
+    compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.2@aar'
     compile 'com.google.android.gms:play-services-gcm:7.5.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
