--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
             android:value="izziDB.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="4" />
+            android:value="5" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -101,9 +101,8 @@
         <activity
             android:name=".UserActivity"
             android:label="@string/title_activity_user"
-            android:theme="@android:style/Theme.Black.NoTitleBar"
-
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
         <activity
             android:name=".ServiciosActivity"
@@ -214,12 +213,20 @@
         </activity>
         <activity
             android:name=".RecuperaFinActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar"
-            android:label="@string/title_activity_recupera_fin" >
+            android:label="@string/title_activity_recupera_fin"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
 
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
+        <activity
+            android:name=".SwitchUserActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/title_activity_switch_user" >
+        </activity>
     </application>
 
 </manifest>
