--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "telecom.televisa.com.izzi"
         minSdkVersion 15
         targetSdkVersion 15
-        versionCode 15
-        versionName "2.0"
+        versionCode 23
+        versionName "2.2.6"
     }
     buildTypes {
         release {
@@ -23,6 +23,13 @@ android {
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+       // maven {
+         //   credentials{
+           //     username "velezboy"
+             //   password "Holanda7#"
+            //}
+            //url "https://github.com/jwmsolutions/izziConnectAndroid/"
+        //}
     }
 }
 
@@ -31,8 +38,8 @@ dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.makeramen:roundedimageview:2.0.1'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'io.card:android-sdk:5.0.0'
+    compile 'com.google.code.gson:gson:2.5'
+    compile 'io.card:android-sdk:5.2.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.google.zxing:core:2.2'
@@ -41,6 +48,6 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.2@aar'
     compile 'com.google.android.gms:play-services-gcm:7.5.0'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.11'
 
 }
