--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     compile 'com.daimajia.slider:library:1.1.2@aar'
     compile 'com.google.android.gms:play-services-gcm:7.5.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.11'
+    compile 'com.github.dbachelder:CreditCardEntry:1.4.7'
 
 }
