--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -229,9 +229,13 @@
         </activity>
         <activity
             android:name=".PushNotificationCenterActivity"
+            android:label="@string/title_activity_push_notification_center"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/title_activity_push_notification_center" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".Registro_main_activity"
+            android:label="@string/title_activity_registro_main_activity" >
         </activity>
     </application>
 
