--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -235,7 +235,27 @@
         </activity>
         <activity
             android:name=".Registro_main_activity"
-            android:label="@string/title_activity_registro_main_activity" >
+            android:label="@string/title_activity_registro_main_activity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".RegistroStep2Activity"
+            android:label="@string/title_activity_registro_step2"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".RegistroPaso3"
+            android:label="@string/title_activity_registro_paso3"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".SMSConfirmaActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/title_activity_smsconfirma" >
         </activity>
     </application>
 
