--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="izzi"
+        android:largeHeap="true"
         android:theme="@style/AppTheme" >
         <receiver
             android:name="com.appsflyer.MultipleInstallBroadcastReceiver"
