--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "telecom.televisa.com.izzi"
         minSdkVersion 16
         targetSdkVersion 16
-        versionCode 47
-        versionName "3.2.1"
+        versionCode 48
+        versionName "3.2.2"
     }
     buildTypes {
         release {
