--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,7 +120,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 16
         versionCode readBuildCode()
-        versionName readVersionName()
+        versionName '3.8.8.3'
     }
     signingConfigs {
         release {
@@ -132,6 +132,7 @@ android {
     }
     buildTypes {
         release {
+            incrementBuildNumber()
             minifyEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
